<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--  Header -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/header"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/turn_left"
            android:clickable="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:paddingLeft="10dp"
                android:src="@drawable/turn_left1"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/edit_info"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>

    <!--  Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/real_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_portrait"/>

        <com.example.ryo.job_employer.self_defining.CircleImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/touxiang" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hold_position"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

        <ImageView
            android:paddingLeft="5dp"
            android:src="@drawable/turn_right1"
            android:layout_width="25dp"
            android:layout_height="25dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:id="@+id/firm_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/firm_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/netobcomplt"/>

        <ImageView
            android:paddingLeft="5dp"
            android:src="@drawable/turn_right1"
            android:layout_width="25dp"
            android:layout_height="25dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/header" />

</LinearLayout>