<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--  Header -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/header"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/turn_left"
            android:clickable="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:paddingLeft="10dp"
                android:src="@drawable/turn_left1"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/my_position"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>

    <!--  Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/position_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_name_"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classify"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classify_"/>

        <ImageView
            android:paddingLeft="5dp"
            android:src="@drawable/turn_right1"
            android:layout_width="25dp"
            android:layout_height="25dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/position_classify"/>

        <ImageView
            android:src="@drawable/turn_right1"
            android:layout_width="25dp"
            android:layout_height="25dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary_"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:text="@string/position_request"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:height="80dp"
            android:hint="@string/position_sp_"
            android:textColorHint="#ffffff"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text=""
            android:background="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:text="@string/position_sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:height="80dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:hint="@string/position_sp_"
            android:background="#ffffff" />

    </LinearLayout>

</LinearLayout>